fix: filter first argument in private chat tab completer